--- a/views/add_equipment.html
+++ b/views/add_equipment.html
@@ -86,33 +86,33 @@
                         <ul style="padding-left: 0;">
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Surgery</span>
+                                    <span>OR</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationSurgery">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionSurgery">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingSurgery">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingOR">Inventory Listing Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Emergency</span>
+                                    <span>CCU</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationEmergency">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionEmergency">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingEmergency">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingCCU">Inventory Listing Reports</a></li>
 
                                 </ul>
                             </li>
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Catheterization</span>
+                                    <span>Out Patient</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationCatheter">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionCatheter">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingCatheter">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingOutPatient">Inventory Listing Reports</a></li>
 
                                 </ul>
                             </li>
@@ -173,10 +173,19 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="cost" class="control-label col-lg-2">Cost</label>
+                                        <label for="location" class="control-label col-lg-2">Location</label>
 
                                         <div class="col-lg-10">
-                                            <input class=" form-control" name="cost" type="number" required/>
+                                            <input class=" form-control" name="location" type="text" required/>
+                                        </div>
+
+
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="brandname" class="control-label col-lg-2">Brand Name</label>
+
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" name="brandname" type="text" required/>
                                         </div>
 
 
@@ -195,10 +204,22 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="maintainDate" class="control-label col-lg-2">Maintainance Date</label>
+                                        <label for="operationDate" class="control-label col-lg-2">Operation Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="maintainDate" name="maintainDate" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="operationDate" name="operationDate" size="16" class="form-control" required>
+                                                <span class="input-group-btn add-on">
+                            <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
+                            </span>
+                                            </div>
+                                            <span class="help-block">Select date</span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="supplyDate" class="control-label col-lg-2">Supply Date</label>
+                                        <div class="col-lg-3">
+                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
+                                                <input type="text" readonly="" id="supplyDate" name="supplyDate" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
@@ -210,9 +231,9 @@
                                         <label for="department" class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
                                             <select class="form-control" id="department" name="department" required>
-                                                <option value="Surgery">Surgery</option>
-                                                <option value="Emergency">Emergency</option>
-                                                <option value="Catheterization">Catheterization</option>
+                                                <option value="OR">OR</option>
+                                                <option value="CCU">CCU</option>
+                                                <option value="OutPatient">Out Patient</option>
                                               </select>
                                         </div>
                                     </div>
