--- a/views/add_inventorylisting.html
+++ b/views/add_inventorylisting.html
@@ -85,33 +85,33 @@
                         <ul style="padding-left: 0;">
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Surgery</span>
+                                    <span>OR</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationSurgery">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionSurgery">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingSurgery">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingOR">Inventory Listing Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Emergency</span>
+                                    <span>CCU</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationEmergency">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionEmergency">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingEmergency">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingCCU">Inventory Listing Reports</a></li>
 
                                 </ul>
                             </li>
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Catheterization</span>
+                                    <span>Out Patient</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationCatheter">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionCatheter">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingCatheter">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingOutPatient">Inventory Listing Reports</a></li>
 
                                 </ul>
                             </li>
@@ -152,9 +152,9 @@
                                         <label for="department" class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
                                             <select class="form-control" id="department" name="department" required>
-                                                <option value="Surgery">Surgery</option>
-                                                <option value="Emergency">Emergency</option>
-                                                <option value="Catheterization">Catheterization</option>
+                                                <option value="OR">OR</option>
+                                                <option value="CCU">CCU</option>
+                                                <option value="OutPatient">Out Patient</option>
                                               </select>
                                         </div>
                                     </div>
