--- a/views/home/ORInspectionReport.handlebars
+++ b/views/home/ORInspectionReport.handlebars
@@ -86,33 +86,33 @@
                     <ul style="padding-left: 0;">
                         <li class="sub-menu">
                             <a  href="javascript:;">
-                                <span>Surgery</span>
+                                <span>OR</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="/showPre-installationSurgery">Pre-installation Reports</a></li>
-                                <li ><a href="/showDailyInspectionSurgery">Daily Inspection Reports</a></li>
-                                <li><a href="/showInventoryListingSurgery">Inventory Listing Reports</a></li>
+                                <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
+                                <li ><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
+                                <li><a href="/showInventoryListingOR">Inventory Listing Reports</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
                             <a href="javascript:;">
-                                <span>Emergency</span>
+                                <span>CCU</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="/showPre-installationEmergency">Pre-installation Reports</a></li>
-                                <li><a href="/showDailyInspectionEmergency">Daily Inspection Reports</a></li>
-                                <li><a href="/showInventoryListingEmergency">Inventory Listing Reports</a></li>
+                                <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
+                                <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
+                                <li><a href="/showInventoryListingCCU">Inventory Listing Reports</a></li>
 
                             </ul>
                         </li>
                         <li class="sub-menu">
                             <a class="active" href="javascript:;">
-                                <span>Catheterization</span>
+                                <span>Out Patient</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="/showPre-installationCatheter">Pre-installation Reports</a></li>
-                                <li class="active"><a href="/showDailyInspectionCatheter">Daily Inspection Reports</a></li>
-                                <li><a href="/showInventoryListingCatheter">Inventory Listing Reports</a></li>
+                                <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
+                                <li class="active"><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
+                                <li><a href="/showInventoryListingOutPatient">Inventory Listing Reports</a></li>
 
                             </ul>
                         </li>
