--- a/views/home/OutPatientDailyinspection.handlebars
+++ b/views/home/OutPatientDailyinspection.handlebars
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+
     <section id="container">
         <!-- **********************************************************************************************************************************************************
         TOP BAR CONTENT & NOTIFICATIONS
@@ -84,34 +85,34 @@
                         </a>
                         <ul style="padding-left: 0;">
                             <li class="sub-menu">
-                                <a href="javascript:;">
-                                    <span>Surgery</span>
+                                <a  href="javascript:;">
+                                    <span>OR</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationSurgery">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionSurgery">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingSurgery">Inventory Listing Reports</a></li>
+                                    <li ><a href="/showPre-installationOR">Pre-installation Reports</a></li>
+                                    <li ><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingOR">Inventory Listing Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
-                                <a class="active" href="javascript:;">
-                                    <span>Emergency</span>
+                                <a href="javascript:;">
+                                    <span>CCU</span>
                                 </a>
                                 <ul class="sub">
-                                    <li class="active"><a href="/showPre-installationEmergency">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionEmergency">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingEmergency">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
+                                    <li ><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingCCU">Inventory Listing Reports</a></li>
 
                                 </ul>
                             </li>
                             <li class="sub-menu">
-                                <a href="javascript:;">
-                                    <span>Catheterization</span>
+                                <a  class="active" href="javascript:;">
+                                    <span>Out Patient</span>
                                 </a>
                                 <ul class="sub">
-                                    <li ><a href="/showPre-installationCatheter">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionCatheter">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingCatheter">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
+                                    <li class="active"><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingOutPatient">Inventory Listing Reports</a></li>
 
                                 </ul>
                             </li>
@@ -141,7 +142,7 @@
         <!--main content start-->
         <section id="main-content">
             <section class="wrapper">
-                <h3><i class="fa fa-angle-right"></i> Pre-installation Reports For Emergency Department</h3>
+                <h3><i class="fa fa-angle-right"></i> Daily Inspection Reports For Out Patient Department</h3>
                 <div class="row mb">
                     <!-- page start-->
                     <div class="content-panel">
@@ -152,32 +153,27 @@
                                 <thead>
                                     <tr class="centerRow">
                                         <th></th>
-                                        <th  >Equipment</th>
                                         <th >Serial Number</th>
-                                        <th >Date</th>
+                                        <th >Location</th>
                                         <th >Name of The Responsible</th>
-                                        <th class="hidden-phone">Floor</th>
-                                        <th class="hidden-phone">Room</th>
-                                        
+                                        <th >Begin Date</th>
+                                        <th >End Date</th>
+                                        <th >Name</th>
+
                                     </tr>
                                 </thead>
                                 <tbody>
-                                        {{#each newform}}
-
+                                    {{#each daily}}
                                     <tr class="gradeA">
-                                        <td><a href="/EmergencyPreinstallationReport/{{this.dataValues.SerialNO}}"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
-                                        <td>{{this.dataValues.Equipment}}</td>
-                                        <td>{{this.dataValues.SerialNO}}</td>
-                                        <td>{{this.dataValues.Date}}</td>
-                                        <td>{{this.dataValues.Name}}</td>
-                                        <td class=" hidden-phone">{{this.dataValues.Floor}}</td>
-                                        <td class=" hidden-phone">{{this.dataValues.Room}}</td>
-
-                                        
+                                        <td><a href="/OutPatientDailyInspectionReport/{{this.dataValues.SerailNo}}"><img src="lib/advanced-datatable/images/details_open.png"></a></td>
+                                        <td>{{this.dataValues.SerailNo}}</td>
+                                        <td>{{this.dataValues.Location}}</td>
+                                        <td>{{this.dataValues.Authorized_Operator}}</td>
+                                        <td>{{this.dataValues.BeginDate}}</td>
+                                        <td>{{this.dataValues.EndDate}}</td>
+                                        <th >{{this.dataValues.Authorized_Operator}}</th>
                                     </tr>
-                                        {{/each}}
-
-                                  
+                                    {{/each}}
                                 </tbody>
                             </table>
                         </div>
@@ -191,10 +187,8 @@
         <!-- /MAIN CONTENT -->
         <!--main content end-->
 
-      
-
+ 
     </section>
-
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
@@ -215,7 +209,7 @@
     <script src="lib/common-scripts.js"></script>
 
     <!--script for this page-->
-        <script type="text/javascript">
+       <script type="text/javascript">
     
         /* Formating function for row details */
    
@@ -242,7 +236,6 @@
         });
         
     </script>
-    
 </body>
 
 </html>
