--- a/views/home/ORInspectionReport.handlebars
+++ b/views/home/ORInspectionReport.handlebars
@@ -261,34 +261,34 @@
                                                     <input disabled {{newform.dataValues.ForeignSubstances4}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="ForeignSubstances4" value="checked" name="ForeignSubstances4">
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled{{newform.dataValues.DamageOrCracks4}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks4" value="checked" name="DamageOrCracks4">
+                                                    <input disabled {{newform.dataValues.DamageOrCracks4}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks4" value="checked" name="DamageOrCracks4">
 
                                                 </div>
                                             </td>
                                             <td class="cell">
                                                 <div style="margin:15px 0px 0px 5px;padding:0px;">
-                                                    <input disabled{{newform.dataValues.ForeignSubstances5}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="ForeignSubstances5" value="checked" name="ForeignSubstances5">
+                                                    <input disabled {{newform.dataValues.ForeignSubstances5}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="ForeignSubstances5" value="checked" name="ForeignSubstances5">
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled{{newform.dataValues.DamageOrCracks5}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks5" value="checked" name="DamageOrCracks5">
+                                                    <input disabled {{newform.dataValues.DamageOrCracks5}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks5" value="checked" name="DamageOrCracks5">
 
                                                 </div>
                                             </td>
                                             <td class="cell">
                                                 <div style="margin:15px 0px 0px 5px;padding:0px;">
-                                                    <input disabled{{newform.dataValues.ForeignSubstances6}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="ForeignSubstances6" value="checked" name="ForeignSubstances6">
+                                                    <input disabled {{newform.dataValues.ForeignSubstances6}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="ForeignSubstances6" value="checked" name="ForeignSubstances6">
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled{{newform.dataValues.DamageOrCracks6}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks6" value="checked" name="DamageOrCracks6">
+                                                    <input disabled {{newform.dataValues.DamageOrCracks6}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks6" value="checked" name="DamageOrCracks6">
 
                                                 </div>
                                             </td>
                                             <td class="cell">
                                                 <div style="margin:15px 0px 0px 5px;padding:0px;">
-                                                    <input disabled{{newform.dataValues.ForeignSubstances7}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="ForeignSubstances7" value="checked" name="ForeignSubstances7">
+                                                    <input disabled {{newform.dataValues.ForeignSubstances7}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="ForeignSubstances7" value="checked" name="ForeignSubstances7">
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled{{newform.dataValues.DamageOrCracks7}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks7" value="checked" name="DamageOrCracks7">
+                                                    <input disabled {{newform.dataValues.DamageOrCracks7}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamageOrCracks7" value="checked" name="DamageOrCracks7">
 
                                                 </div>
                                             </td>
@@ -326,7 +326,7 @@
                                                     <input disabled {{newform.dataValues.BrokenOrLooseBattery2}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="BrokenOrLooseBattery2" value="checked" name="BrokenOrLooseBattery2">
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamagedORLeakingBattery2" value="checked" name="DamagedORLeakingBattery2">
+                                                    <input disabled {{newform.dataValues.DamagedORLeakingBattery2}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamagedORLeakingBattery2" value="checked" name="DamagedORLeakingBattery2">
 
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
@@ -366,7 +366,7 @@
                                                     <input disabled {{newform.dataValues.BrokenOrLooseBattery5}}  type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="BrokenOrLooseBattery5" value="checked" name="BrokenOrLooseBattery5">
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamagedORLeakingBattery5" value="checked" name="DamagedORLeakingBattery5">
+                                                    <input disabled {{newform.dataValues.DamagedORLeakingBattery5}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="DamagedORLeakingBattery5" value="checked" name="DamagedORLeakingBattery5">
 
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
@@ -484,7 +484,7 @@
 
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled {{newform.dataVaVlues.serviceIndicator1}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="serviceIndicator1" value="checked" name="serviceIndicator1">
+                                                    <input disabled {{newform.dataValues.serviceIndicator1}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="serviceIndicator1" value="checked" name="serviceIndicator1">
 
                                                 </div>
                                             </td>
@@ -562,7 +562,7 @@
                                                     <input disabled {{newform.dataValues.selfTestMessage6}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px;padding:0px;" class="checkbox form-control" id="selfTestMessage6" value="checked" name="selfTestMessage6">
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
-                                                    <input disabled {{newform.dataValues.SpeakerBeep6}}type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="SpeakerBeep6" value="checked" name="SpeakerBeep6">
+                                                    <input disabled {{newform.dataValues.SpeakerBeep6}} type="checkbox" style="width: 20px;min-height: 2px;height: 20px; padding:0px;" class="checkbox form-control" id="SpeakerBeep6" value="checked" name="SpeakerBeep6">
 
                                                 </div>
                                                 <div style="margin:5px 0px 0px 5px;padding:0px;">
